--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "install": "^0.13.0",
+    "lodash.debounce": "^4.0.8",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
