--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "html2canvas": "^1.4.1",
     "install": "^0.13.0",
     "lodash.debounce": "^4.0.8",
     "next": "14.2.15",
     "num2words": "^1.0.2",
     "number-to-words": "^1.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.7.0"
   },
   "devDependencies": {
     "postcss": "^8",
